--- a/src/grep/Makefile
+++ b/src/grep/Makefile
@@ -1,7 +1,13 @@
+CC=gcc
+CFLAGS=-Wall -Wextra -Werror -std=c11 -O2 -D_GNU_SOURCE
+
+all: build
+build: s21_grep
 s21_grep: s21_grep.o
-	gcc  s21_grep.c -o  s21_grep
+	${CC} ${CFLAGS} s21_grep.o -o s21_grep
 s21_grep.o: s21_grep.c s21_grep.h 
-	gcc -c  s21_grep.c
+	${CC} -c s21_grep.c
 clean:
 	rm -rf *.o s21_grep
 rebuild: clean s21_grep
+.PHONY:all clean rebuild
