--- a/src/grep_andr/Makefile
+++ b/src/grep_andr/Makefile
@@ -1,7 +1,6 @@
 CC=gcc
 CFLAGS=-Wall -Wextra -Werror -O2 -std=c11 -D_GNU_SOURCE
-TEST=-fsanitize=address -g -pedantic
-
+TEST=
 all: build
 
 build: s21_grep
@@ -16,13 +15,13 @@ s21_grep.o: s21_grep.c s21_grep.h
 	${CC} ${CFLAGS} s21_grep.c s21_grep.h -c
 
 s21_grep_test.o: s21_grep.c s21_grep.h
-	${CC} ${CFLAGS} ${TEST} s21_grep.c s21_grep.h -c
+	${CC} ${CFLAGS} s21_grep.c s21_grep.h -c
 
 linked_list.o: 
 	${CC} ${CFLAGS} linked_list.c linked_list.h -c
 
 linked_list_test.o: 
-	${CC} ${CFLAGS} ${TEST} linked_list.c linked_list.h -c
+	${CC} ${CFLAGS} linked_list.c linked_list.h -c
 
 .PHONY: all clean rebuild
 
